# visualize-cbn

./: .gitignore  CONTRIBUTORS  ChangeLog.md  README.md  minimal.html  stack.yaml  visualize-cbn.cabal
.github/workflows/: haskell-ci.yml
examples/: circular_hos.hs  counter.hs  fac.hs  fix-fac.hs  graph.hs  head-map-repeat.hs  lazy-state.hs  length-acc-strict.hs  length-acc.hs  length-naive.hs  lengthEnumFromTo.hs  mapM_Maybe.hs  maybe-fac.hs  multi_level_heap.hs  multiple-beta.hs  mutual_rec.hs  open_rec_version0.hs  open_rec_version1.hs  open_rec_version2.hs  repmin.hs  selthunkopt.hs  selthunkopt2.hs  skim.hs  take.hs  ticktock.hs
src/: Main.hs
src/CBN/: Closure.hs  Eval.hs  Free.hs  Heap.hs  InlineHeap.hs  Language.hs  Options.hs  Parser.hs  Pretty.hs  SelThunkOpt.hs  Subst.hs  Trace.hs  Util.hs
src/CBN/Pretty/: Doc.hs  HTML.hs  Precedence.hs
src/CBN/Trace/: Graph.hs  HTML.hs  HeapGraph.hs  JavaScript.hs  Textual.hs
src/CBN/Util/: Doc.hs  Map.hs  Snoc.hs
src/CBN/Util/Doc/: Rendered.hs  Style.hs
src/CBN/Util/Doc/Rendered/: ANSI.hs  HTML.hs  String.hs
