cabal-version:       >=1.10
name:                visualize-cbn
version:             0.2.0
synopsis:            Visualize CBN reduction
description:         CBN interpretation and visualization tool.
                     Exports in text format, coloured text (ANSI) or HTML/JavaScript.
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Well-Typed LLP
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md README.md CONTRIBUTORS

tested-with:
  GHC == 9.8.1
  GHC == 9.6.3
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7

source-repository head
  type:     git
  location: https://github.com/well-typed/visualize-cbn

executable visualize-cbn
  main-is:             Main.hs
  other-modules:       CBN.Closure
                       CBN.Eval
                       CBN.Free
                       CBN.Heap
                       CBN.InlineHeap
                       CBN.Language
                       CBN.Options
                       CBN.Parser
                       CBN.Pretty
                       CBN.Pretty.Precedence
                       CBN.SelThunkOpt
                       CBN.Subst
                       CBN.Trace
                       CBN.Trace.HeapGraph
                       CBN.Trace.JavaScript
                       CBN.Trace.Textual
                       CBN.Trace.Graph
                       CBN.Util.Doc
                       CBN.Util.Doc.Rendered
                       CBN.Util.Doc.Rendered.ANSI
                       CBN.Util.Doc.Rendered.HTML
                       CBN.Util.Doc.Rendered.String
                       CBN.Util.Doc.Style
                       CBN.Util.Map
                       CBN.Util.Snoc
  build-depends:       base                 >= 4.14 && < 4.20
                     , ansi-terminal        >= 1.0  && < 1.1
                     , blaze-html           >= 0.9  && < 0.10
                     , blaze-markup         >= 0.8  && < 0.9
                     , containers           >= 0.6  && < 0.8
                     , data-default         >= 0.7  && < 0.8
                     , mtl                  >= 2.2  && < 2.4
                     , optparse-applicative >= 0.18 && < 0.19
                     , parsec               >= 3.1  && < 3.2
                     , template-haskell     >= 2.16 && < 2.22
                     , text                 >= 1.2  && < 2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  DeriveDataTypeable
                       ExistentialQuantification
                       FlexibleInstances
                       LambdaCase
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
  other-extensions:    GeneralizedNewtypeDeriving
                       OverloadedStrings
                       TemplateHaskell
  ghc-options:         -Wall
                       -fno-warn-orphans
                       -rtsopts
                       "-with-rtsopts=-M128M"
